objects/Account_CCP__c.object
<CustomObject>
    <description>Junction Object to Link Channel Partners Assigned to Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_CCPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Channel Partners (Partner)</relationshipLabel>
        <relationshipName>Channel_Partner_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>GSS Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upsert_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Upsert key. Combination of Account Id &amp; Partner Id
Format: AccountId_PartnerId</description>
        <externalId>true</externalId>
        <label>Upsert Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Channel Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Partner__c</columns>
        <columns>Source__c</columns>
        <columns>Upsert_Key__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACCP-{0000}</displayFormat>
        <label>Account CCP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Channel Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Account_Channel_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW() , ISPICKVAL( Account__r.Channel_Type__c , &apos;Direct&apos;), false)</errorConditionFormula>
        <errorMessage>You cannot Create a Channel Partner for an Account with Direct Channel Type</errorMessage>
    </validationRules>
</CustomObject>